--- a/app/src/main/res/layout/fragment_sublogin1.xml
+++ b/app/src/main/res/layout/fragment_sublogin1.xml
@@ -16,13 +16,16 @@
 
             <Button
                 android:text="SKIP (DEV MODE)"
-                android:layout_width="wrap_content"
+                android:layout_width="152dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/skipbtn"
-                app:layout_constraintLeft_toLeftOf="@+id/loginbtn"
                 app:layout_constraintBottom_toTopOf="@+id/loginbtn"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintRight_toRightOf="@+id/loginbtn" />
+                android:layout_marginBottom="16dp"
+                app:layout_constraintLeft_toLeftOf="@+id/usernamefield"
+                android:layout_marginStart="24dp"
+                app:layout_constraintRight_toRightOf="@+id/usernamefield"
+                app:layout_constraintHorizontal_bias="0.46"
+                android:layout_marginEnd="24dp" />
 
             <TextView
                 android:layout_width="368dp"
@@ -33,8 +36,11 @@
                 android:textAlignment="center"
                 android:typeface="sans"
                 android:id="@+id/title_login1"
-                tools:layout_editor_absoluteY="89dp"
-                tools:layout_editor_absoluteX="8dp" />
+                app:layout_constraintLeft_toLeftOf="@+id/usernamefield"
+                app:layout_constraintRight_toRightOf="@+id/usernamefield"
+                app:layout_constraintBottom_toTopOf="@+id/usernamefield"
+                android:layout_marginBottom="160dp"
+                app:layout_constraintHorizontal_bias="1.0" />
 
             <Button
                 android:text="New User"
@@ -75,8 +81,10 @@
                 android:id="@+id/loginbtn"
                 tools:layout_constraintBottom_creator="1"
                 app:layout_constraintBottom_toTopOf="@+id/registerbtn"
-                tools:layout_editor_absoluteX="122dp"
-                android:layout_marginBottom="32dp" />
+                android:layout_marginBottom="48dp"
+                app:layout_constraintLeft_toLeftOf="@+id/skipbtn"
+                app:layout_constraintRight_toRightOf="@+id/skipbtn"
+                app:layout_constraintHorizontal_bias="1.0" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
