--- a/app/src/main/res/xml/macronutrient_preference.xml
+++ b/app/src/main/res/xml/macronutrient_preference.xml
@@ -1,30 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:title="Macronutrient Daily Goals">
+        android:title="Macronutrient Daily Goals \n(The values you set are kept if settings not changed\nTo change you goals tap on a percentage and modify it )">
 
         <EditTextPreference
             android:key="EditTextPrefCarbsGoal"
-            android:title="Carbs"
-            android:inputType="number"
-            android:defaultValue="@string/CarbPreferenceDefault"/>
+            android:title="Carbs Percentage"
+            android:inputType="number" />
 
         <EditTextPreference
             android:key="EditTextPrefProteinGoal"
-            android:title="Protein"
-            android:inputType="number"
-            android:defaultValue="@string/ProteinPreferenceDefault"/>
+            android:title="Protein Percentage"
+            android:inputType="number" />
 
         <EditTextPreference
             android:key="EditTextPrefFatGoal"
-            android:title="Fat"
-            android:inputType="number"
-            android:defaultValue="@string/FatPreferenceDefault"/>
+            android:title="Fat Percentage"
+            android:inputType="number" />
         <CheckBoxPreference
             android:defaultValue="false"
             android:title="Daily Notifications"
-            android:key="check_box_preference_1" />
+            android:key="check_box_preference_1"
+            android:id="@+id/notifycheckbox" />
 
     </PreferenceCategory>
 </PreferenceScreen>
