--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -4,6 +4,9 @@
     tools:context="com.example.kareem.macrotracker.HomeActivity">
     <item android:title="Logout"
         android:id="@+id/logout_menu_btn" />
+    <item android:title="Macro Settings"
+        android:id="@+id/macro_settings_btn" />
+
     <item
         android:id="@+id/action_MacroSettings"
         android:orderInCategory="100"
@@ -18,4 +21,9 @@
         app:showAsAction="always"
         android:icon="@drawable/mealsettings_icon"
         />
+    <item android:title="Profile"
+        android:id="@+id/profile_menu_btn"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_account_circle_white_24dp"
+        android:orderInCategory="101" />
 </menu>
