--- a/app/src/main/res/layout/activity_macro_settings.xml
+++ b/app/src/main/res/layout/activity_macro_settings.xml
@@ -26,8 +26,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="none"
                 android:ems="10"
-                android:id="@+id/txt_weight"
-                android:hint="Weight"
+                android:id="@+id/txt_age"
+                android:hint="Age"
                 android:layout_width="100dp"
                 app:layout_constraintRight_toLeftOf="@+id/txt_gender"
                 android:layout_marginEnd="8dp"
@@ -36,7 +36,8 @@
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:editable="false"
-                android:enabled="false" />
+                android:enabled="false"
+                android:textAlignment="center" />
 
             <EditText
                 android:layout_width="100dp"
@@ -45,24 +46,24 @@
                 android:ems="10"
                 android:id="@+id/txt_height"
                 android:hint="Height"
-                app:layout_constraintRight_toRightOf="@+id/txt_weight"
-                app:layout_constraintLeft_toLeftOf="@+id/txt_weight"
+                app:layout_constraintRight_toRightOf="@+id/txt_age"
+                app:layout_constraintLeft_toLeftOf="@+id/txt_age"
                 app:layout_constraintHorizontal_bias="0.0"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/txt_weight"
+                app:layout_constraintTop_toBottomOf="@+id/txt_age"
                 android:editable="false"
-                android:enabled="false" />
+                android:enabled="false"
+                android:textAlignment="center" />
             <lecho.lib.hellocharts.view.PieChartView
                 android:id="@+id/macro_chart"
                 android:layout_width="336dp"
-                android:layout_marginTop="80dp"
-                app:layout_constraintTop_toBottomOf="@+id/txt_height"
-                android:layout_marginStart="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="168dp"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.33"
-                android:layout_height="300dp" />
+                android:layout_marginStart="8dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
             <EditText
                 android:layout_width="100dp"
@@ -79,21 +80,23 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 android:editable="false"
-                android:enabled="false" />
+                android:enabled="false"
+                android:textAlignment="center" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:inputType="none"
                 android:ems="10"
-                android:id="@+id/txt_goal"
-                android:hint="Goal"
+                android:id="@+id/txt_weight"
+                android:hint="Weight"
                 app:layout_constraintRight_toRightOf="@+id/txt_gender"
                 app:layout_constraintLeft_toLeftOf="@+id/txt_gender"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/txt_gender"
                 android:editable="false"
-                android:enabled="false" />
+                android:enabled="false"
+                android:textAlignment="center" />
 
             <EditText
                 android:layout_width="100dp"
@@ -107,21 +110,100 @@
                 app:layout_constraintTop_toBottomOf="@+id/txt_height"
                 android:hint="Workout"
                 android:editable="false"
+                android:enabled="false"
+                android:textAlignment="center" />
+
+            <EditText
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:ems="10"
+                android:id="@+id/txt_goal"
+                app:layout_constraintRight_toRightOf="@+id/txt_weight"
+                app:layout_constraintLeft_toLeftOf="@+id/txt_weight"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/txt_weight"
+                android:hint="Goal"
+                android:editable="false"
+                android:enabled="false"
+                android:textAlignment="center"
+                android:layout_width="150dp" />
+
+            <EditText
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/txt_carbs"
+                android:hint="Carbs"
+                android:textAlignment="center"
+                app:layout_constraintLeft_toLeftOf="@+id/macro_chart"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
                 android:enabled="false" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="none"
+                android:inputType="number"
                 android:ems="10"
-                android:id="@+id/txt_age"
-                app:layout_constraintRight_toRightOf="@+id/txt_goal"
-                app:layout_constraintLeft_toLeftOf="@+id/txt_goal"
+                android:id="@+id/txt_protein"
+                android:layout_marginStart="16dp"
+                app:layout_constraintLeft_toRightOf="@+id/txt_carbs"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/txt_goal"
-                android:hint="Age"
-                android:editable="false"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintRight_toLeftOf="@+id/txt_fat"
+                app:layout_constraintHorizontal_bias="0.25"
+                android:hint="Protein"
+                android:textAlignment="center"
                 android:enabled="false" />
+
+            <EditText
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/txt_fat"
+                android:hint="Fat"
+                android:textAlignment="center"
+                app:layout_constraintRight_toRightOf="@+id/macro_chart"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                android:enabled="false" />
+
+            <EditText
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/txt_cal"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginStart="8dp"
+                android:hint="Calories"
+                android:textAlignment="center"
+                android:enabled="false"
+                android:layout_width="150dp" />
+
+            <EditText
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/txt_BMR"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginStart="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/txt_cal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="24dp"
+                app:layout_constraintHorizontal_bias="1.0"
+                android:hint="BMR"
+                android:textAlignment="center"
+                android:enabled="false" />
+
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
