--- a/app/src/main/res/layout/activity_macro_settings.xml
+++ b/app/src/main/res/layout/activity_macro_settings.xml
@@ -9,7 +9,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:descendantFocusability="beforeDescendants"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
     tools:context="com.example.kareem.macrotracker.Activities.MacroSettings">
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="308dp"
+        android:id="@+id/edit_fab"
+        app:backgroundTint="?attr/colorPrimary" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -27,91 +41,88 @@
                 android:inputType="none"
                 android:ems="10"
                 android:id="@+id/txt_age"
-                android:hint="Age"
                 android:layout_width="100dp"
                 app:layout_constraintRight_toLeftOf="@+id/txt_gender"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintTop_toTopOf="parent"
-                android:editable="false"
                 android:enabled="false"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                app:layout_constraintHorizontal_bias="0.44"
+                android:layout_marginLeft="16dp"
+                android:editable="false" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="none"
                 android:ems="10"
                 android:id="@+id/txt_height"
-                android:hint="Height"
                 app:layout_constraintRight_toRightOf="@+id/txt_age"
                 app:layout_constraintLeft_toLeftOf="@+id/txt_age"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginTop="8dp"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintTop_toBottomOf="@+id/txt_age"
-                android:editable="false"
                 android:enabled="false"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:inputType="none"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:editable="false" />
             <lecho.lib.hellocharts.view.PieChartView
                 android:id="@+id/macro_chart"
                 android:layout_width="336dp"
-                android:layout_height="200dp"
                 android:layout_marginTop="168dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginStart="8dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_height="180dp" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="none"
                 android:ems="10"
                 android:id="@+id/txt_gender"
-                android:hint="Gender"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginEnd="48dp"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
-                android:editable="false"
                 android:enabled="false"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:inputType="none"
+                android:editable="false" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="none"
                 android:ems="10"
                 android:id="@+id/txt_weight"
-                android:hint="Weight"
                 app:layout_constraintRight_toRightOf="@+id/txt_gender"
-                app:layout_constraintLeft_toLeftOf="@+id/txt_gender"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/txt_gender"
-                android:editable="false"
                 android:enabled="false"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:inputType="none"
+                app:layout_constraintHorizontal_bias="1.0"
+                android:editable="false" />
 
             <EditText
-                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:inputType="none"
                 android:ems="10"
                 android:id="@+id/txt_workoutfreq"
                 app:layout_constraintRight_toRightOf="@+id/txt_height"
                 app:layout_constraintLeft_toLeftOf="@+id/txt_height"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/txt_height"
-                android:hint="Workout"
-                android:editable="false"
                 android:enabled="false"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                app:layout_constraintHorizontal_bias="1.0"
+                android:layout_width="100dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:editable="false" />
 
             <EditText
                 android:layout_height="wrap_content"
@@ -119,60 +130,58 @@
                 android:ems="10"
                 android:id="@+id/txt_goal"
                 app:layout_constraintRight_toRightOf="@+id/txt_weight"
-                app:layout_constraintLeft_toLeftOf="@+id/txt_weight"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/txt_weight"
-                android:hint="Goal"
-                android:editable="false"
                 android:enabled="false"
                 android:textAlignment="center"
-                android:layout_width="150dp" />
+                app:layout_constraintHorizontal_bias="1.0"
+                android:layout_width="100dp"
+                android:editable="false" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:ems="10"
                 android:id="@+id/txt_carbs"
-                android:hint="Carbs"
                 android:textAlignment="center"
                 app:layout_constraintLeft_toLeftOf="@+id/macro_chart"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintTop_toBottomOf="@+id/macro_chart"
-                android:enabled="false" />
+                android:enabled="false"
+                android:editable="true"
+                android:inputType="number" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:ems="10"
                 android:id="@+id/txt_protein"
                 android:layout_marginStart="16dp"
                 app:layout_constraintLeft_toRightOf="@+id/txt_carbs"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintTop_toBottomOf="@+id/macro_chart"
                 app:layout_constraintRight_toLeftOf="@+id/txt_fat"
                 app:layout_constraintHorizontal_bias="0.25"
-                android:hint="Protein"
                 android:textAlignment="center"
-                android:enabled="false" />
+                android:enabled="false"
+                android:editable="true"
+                android:inputType="number" />
 
             <EditText
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
                 android:ems="10"
                 android:id="@+id/txt_fat"
-                android:hint="Fat"
                 android:textAlignment="center"
                 app:layout_constraintRight_toRightOf="@+id/macro_chart"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="32dp"
                 app:layout_constraintTop_toBottomOf="@+id/macro_chart"
-                android:enabled="false" />
+                android:enabled="false"
+                android:editable="true"
+                android:inputType="number" />
 
             <EditText
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="none"
                 android:ems="10"
                 android:id="@+id/txt_cal"
                 app:layout_constraintLeft_toLeftOf="parent"
@@ -185,12 +194,13 @@
                 android:hint="Calories"
                 android:textAlignment="center"
                 android:enabled="false"
-                android:layout_width="150dp" />
+                android:layout_width="150dp"
+                android:editable="false" />
 
             <EditText
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:inputType="number"
+                android:inputType="none"
                 android:ems="10"
                 android:id="@+id/txt_BMR"
                 android:layout_marginEnd="8dp"
@@ -202,7 +212,97 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 android:hint="BMR"
                 android:textAlignment="center"
-                android:enabled="false" />
+                android:enabled="false"
+                android:editable="false" />
+
+            <TextView
+                android:text="Age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView4"
+                android:layout_marginTop="40dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/txt_age"
+                android:layout_marginEnd="8dp" />
+
+            <TextView
+                android:text="Height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView9"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
+                app:layout_constraintRight_toLeftOf="@+id/txt_height"
+                android:layout_marginEnd="8dp" />
+
+            <TextView
+                android:text="Workout Freq."
+                android:layout_height="wrap_content"
+                android:id="@+id/textView10"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView9"
+                app:layout_constraintRight_toLeftOf="@+id/txt_workoutfreq"
+                android:layout_width="55dp" />
+
+            <TextView
+                android:text="Gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView11"
+                android:layout_marginTop="40dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/txt_gender" />
+
+            <TextView
+                android:text="Weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView12"
+                android:layout_marginTop="32dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView11"
+                app:layout_constraintRight_toLeftOf="@+id/txt_weight" />
+
+            <TextView
+                android:text="Goal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView13"
+                android:layout_marginTop="24dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView12"
+                app:layout_constraintRight_toLeftOf="@+id/txt_goal" />
+
+            <TextView
+                android:text="Carbs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView14"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                android:layout_marginStart="48dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <TextView
+                android:text="Protein"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView15"
+                android:layout_marginStart="8dp"
+                app:layout_constraintLeft_toRightOf="@+id/textView14"
+                app:layout_constraintRight_toLeftOf="@+id/textView16"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintHorizontal_bias="0.46"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart" />
+
+            <TextView
+                android:text="Fat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView16"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                android:layout_marginEnd="48dp"
+                app:layout_constraintRight_toRightOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
