--- a/app/src/main/res/layout/activity_add_saved_meal.xml
+++ b/app/src/main/res/layout/activity_add_saved_meal.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_add_saved_meal"
     android:layout_width="match_parent"
@@ -10,31 +11,94 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.kareem.macrotracker.Activities.AddSavedMealActivity">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:text="Add Saved Meal"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/Label_AddSavedMeal"
-            android:textAlignment="center"
-            android:textSize="18sp" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:text="Select the meal you wish to add"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/Label_SelectMeal"
-            android:textAlignment="center" />
+            <TextView
+                android:text="Meal Name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/Label_Meal_Name"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/ListView_AddSavedMeals" />
-    </LinearLayout>
+            <TextView
+                android:text="Carbs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/Label_Carbs"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+
+            <TextView
+                android:text="Protein"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/Label_Protien"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+
+            <TextView
+                android:text="Fat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/Label_Fat"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+
+            <TextView
+                android:text="Calories"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/Label_Calories"
+                android:textAppearance="@android:style/TextAppearance.Material.Medium" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:ems="10"
+                    android:id="@+id/EditText_Portion_Amount"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:text="Portion_Unit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Label_Portion_Unit"
+                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <Button
+                    android:text="Enter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Button_Enter"
+                    android:layout_weight="1" />
+
+                <Button
+                    android:text="Cancel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/Button_Cancel"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
