--- a/app/src/main/res/layout/item_daily_meal.xml
+++ b/app/src/main/res/layout/item_daily_meal.xml
@@ -1,25 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content" >
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Meal Name"
-                android:id="@+id/Text_MealName"
-                android:textColor="@color/abc_primary_text_disable_only_material_light" />
 
             <Button
                 style="?android:attr/buttonStyleSmall"
@@ -31,6 +24,28 @@
                 android:clickable="true"
                 android:textStyle="bold"
                 android:textSize="20dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Meal Name"
+                android:id="@+id/Text_MealName"
+                android:textColor="@color/abc_primary_text_disable_only_material_light" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:id="@+id/Text_PortionDetails"
+                tools:text="Portion Details" />
         </LinearLayout>
 
         <LinearLayout
