--- a/app/src/main/res/layout/activity_macro_settings.xml
+++ b/app/src/main/res/layout/activity_macro_settings.xml
@@ -23,7 +23,9 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="308dp"
         android:id="@+id/edit_fab"
-        app:backgroundTint="?attr/colorPrimary" />
+        app:backgroundTint="?attr/colorPrimary"
+        android:layout_marginTop="250dp"
+        android:layout_marginLeft="280dp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -160,7 +162,7 @@
                 android:layout_marginTop="32dp"
                 app:layout_constraintTop_toBottomOf="@+id/macro_chart"
                 app:layout_constraintRight_toLeftOf="@+id/txt_fat"
-                app:layout_constraintHorizontal_bias="0.25"
+                app:layout_constraintHorizontal_bias="0.0"
                 android:textAlignment="center"
                 android:enabled="false"
                 android:editable="true"
@@ -177,7 +179,8 @@
                 app:layout_constraintTop_toBottomOf="@+id/macro_chart"
                 android:enabled="false"
                 android:editable="true"
-                android:inputType="number" />
+                android:inputType="number"
+                android:layout_marginEnd="8dp" />
 
             <EditText
                 android:layout_height="wrap_content"
@@ -303,6 +306,42 @@
                 app:layout_constraintTop_toBottomOf="@+id/macro_chart"
                 android:layout_marginEnd="48dp"
                 app:layout_constraintRight_toRightOf="parent" />
+
+            <TextView
+                android:text="%"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/percentsym1"
+                app:layout_constraintRight_toLeftOf="@+id/txt_protein"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintBottom_toTopOf="@+id/txt_cal"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintVertical_bias="0.75"
+                android:visibility="invisible"
+                android:layout_marginEnd="8dp" />
+            <TextView
+                android:text="%"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/percentsym2"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintBottom_toTopOf="@+id/txt_cal"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintVertical_bias="0.75"
+                android:layout_marginEnd="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:visibility="invisible" />
+            <TextView
+                android:text="%"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/percentsym3"
+                android:visibility="invisible"
+                android:layout_marginTop="48dp"
+                app:layout_constraintTop_toBottomOf="@+id/macro_chart"
+                app:layout_constraintRight_toLeftOf="@+id/txt_fat" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
