delete item from list

--- a/app/src/main/res/layout/item_daily_meal.xml
+++ b/app/src/main/res/layout/item_daily_meal.xml
@@ -22,6 +22,7 @@
                 android:id="@+id/Button_DeleteMeal"
                 android:background="#f40800"
                 android:clickable="true"
+                android:onClick="removeMealHandler"
                 android:textStyle="bold"
                 android:textSize="20dp" />
 
