Added Progress Bar Library Added 3 Progress Bars in home activity

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -16,16 +16,78 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="19dp">
 
-        <TextView
-            android:text="TextView"
+        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/txt_username"
-            android:textStyle="normal|bold"
-            android:textAllCaps="true" />
+            app:rcProgress="40"
+            app:rcSecondaryProgress="0"
+            app:rcMax="100"
+            app:rcRadius="10dp"
+            app:rcBackgroundPadding="2dp"
+            app:rcProgressColor="@color/Red"
+            app:rcSecondaryProgressColor="@color/Red"
+            app:rcBackgroundColor="@color/LightGrey"
+            app:rcIconSrc="@mipmap/ic_launcher"
+            app:rcIconSize="30dp"
+            app:rcIconWidth="30dp"
+            app:rcIconHeight="30dp"
+            app:rcIconPadding="0dp"
+            app:rcIconPaddingLeft="0dp"
+            app:rcIconPaddingRight="0dp"
+            app:rcIconPaddingTop="0dp"
+            app:rcIconPaddingBottom="0dp"
+            app:rcIconBackgroundColor="@color/LightGrey"
+            android:id="@+id/Carb_ProgressBar" />
+
+        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:rcProgress="20"
+            app:rcSecondaryProgress="0"
+            app:rcMax="100"
+            app:rcRadius="10dp"
+            app:rcBackgroundPadding="2dp"
+            app:rcProgressColor="@color/Red"
+            app:rcSecondaryProgressColor="@color/Maroon"
+            app:rcBackgroundColor="@color/LightGrey"
+            app:rcIconSrc="@mipmap/ic_launcher"
+            app:rcIconSize="30dp"
+            app:rcIconWidth="30dp"
+            app:rcIconHeight="30dp"
+            app:rcIconPadding="0dp"
+            app:rcIconPaddingLeft="0dp"
+            app:rcIconPaddingRight="0dp"
+            app:rcIconPaddingTop="0dp"
+            app:rcIconPaddingBottom="0dp"
+            app:rcIconBackgroundColor="@color/LightGrey"
+            android:id="@+id/Protein_ProgressBar" />
+
+        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:rcProgress="20"
+            app:rcSecondaryProgress="0"
+            app:rcMax="100"
+            app:rcRadius="10dp"
+            app:rcBackgroundPadding="2dp"
+            app:rcProgressColor="@color/Red"
+            app:rcSecondaryProgressColor="@color/Maroon"
+            app:rcBackgroundColor="@color/LightGrey"
+            app:rcIconSrc="@mipmap/ic_launcher"
+            app:rcIconSize="30dp"
+            app:rcIconWidth="30dp"
+            app:rcIconHeight="30dp"
+            app:rcIconPadding="0dp"
+            app:rcIconPaddingLeft="0dp"
+            app:rcIconPaddingRight="0dp"
+            app:rcIconPaddingTop="0dp"
+            app:rcIconPaddingBottom="0dp"
+            app:rcIconBackgroundColor="@color/LightGrey"
+            android:id="@+id/Fat_ProgressBar" />
 
         <TableLayout
             android:layout_width="match_parent"
