--- a/app/src/main/res/layout/content_create_simple_meal.xml
+++ b/app/src/main/res/layout/content_create_simple_meal.xml
@@ -253,9 +253,9 @@
                 android:layout_toEndOf="@+id/textView2"
                 android:textColor="#000000"
                 android:textAlignment="center"
-                android:enabled="false"
                 android:hint="100"
-                android:text="100" />
+                android:text="100"
+                android:enabled="true" />
 
         </LinearLayout>
 
