Changed macro icons and progress bar colors

--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -20,74 +20,75 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="19dp">
 
-        <!--<com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
+        <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:rcProgress="40"
-            app:rcSecondaryProgress="0"
+            app:rcSecondaryProgress="70"
             app:rcMax="100"
             app:rcRadius="10dp"
             app:rcBackgroundPadding="2dp"
-            app:rcProgressColor="@color/Red"
-            app:rcSecondaryProgressColor="@color/Red"
-            app:rcBackgroundColor="@color/LightGrey"
-            app:rcIconSrc="@mipmap/ic_launcher"
+            app:rcProgressColor="@color/CarbProgressColor"
+            app:rcSecondaryProgressColor="@color/CarbSecondaryProgressColor"
+            app:rcBackgroundColor="?android:attr/windowBackground"
+            app:rcIconSrc="@drawable/carbs"
             app:rcIconSize="30dp"
             app:rcIconWidth="30dp"
             app:rcIconHeight="30dp"
-            app:rcIconPadding="0dp"
+            app:rcIconPadding="2dp"
             app:rcIconPaddingLeft="0dp"
             app:rcIconPaddingRight="0dp"
             app:rcIconPaddingTop="0dp"
             app:rcIconPaddingBottom="0dp"
-            app:rcIconBackgroundColor="@color/LightGrey"
+            app:rcIconBackgroundColor="?android:attr/windowBackground"
             android:id="@+id/Carb_ProgressBar" />
 
         <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:rcProgress="20"
-            app:rcSecondaryProgress="0"
+            app:rcSecondaryProgress="40"
             app:rcMax="100"
             app:rcRadius="10dp"
             app:rcBackgroundPadding="2dp"
-            app:rcProgressColor="@color/Red"
-            app:rcSecondaryProgressColor="@color/Maroon"
-            app:rcBackgroundColor="@color/LightGrey"
-            app:rcIconSrc="@mipmap/ic_launcher"
+            app:rcProgressColor="@color/ProteinProgessColor"
+            app:rcSecondaryProgressColor="@color/ProteinSecondaryProgressColor"
+            app:rcBackgroundColor="?android:attr/windowBackground"
+            app:rcIconSrc="@drawable/protein"
             app:rcIconSize="30dp"
             app:rcIconWidth="30dp"
             app:rcIconHeight="30dp"
-            app:rcIconPadding="0dp"
+            app:rcIconPadding="2dp"
             app:rcIconPaddingLeft="0dp"
             app:rcIconPaddingRight="0dp"
             app:rcIconPaddingTop="0dp"
             app:rcIconPaddingBottom="0dp"
-            app:rcIconBackgroundColor="@color/LightGrey"
-            android:id="@+id/Protein_ProgressBar" />
+            app:rcIconBackgroundColor="?android:attr/windowBackground"
+            android:id="@+id/Protein_ProgressBar"
+            tools:rcProgressColor="@color/ProteinProgessColor" />
 
         <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:rcProgress="20"
-            app:rcSecondaryProgress="0"
+            app:rcProgress="30"
+            app:rcSecondaryProgress="60"
             app:rcMax="100"
             app:rcRadius="10dp"
             app:rcBackgroundPadding="2dp"
-            app:rcProgressColor="@color/Red"
-            app:rcSecondaryProgressColor="@color/Maroon"
-            app:rcBackgroundColor="@color/LightGrey"
-            app:rcIconSrc="@mipmap/ic_launcher"
+            app:rcProgressColor="@color/FatProgessColor"
+            app:rcSecondaryProgressColor="@color/FatSecondaryProgressColor"
+            app:rcBackgroundColor="?android:attr/windowBackground"
+            app:rcIconSrc="@drawable/fat"
             app:rcIconSize="30dp"
             app:rcIconWidth="30dp"
             app:rcIconHeight="30dp"
-            app:rcIconPadding="0dp"
+            app:rcIconPadding="2dp"
             app:rcIconPaddingLeft="0dp"
             app:rcIconPaddingRight="0dp"
             app:rcIconPaddingTop="0dp"
             app:rcIconPaddingBottom="0dp"
-            app:rcIconBackgroundColor="@color/LightGrey"
-            android:id="@+id/Fat_ProgressBar" />-->
+            app:rcIconBackgroundColor="?android:attr/windowBackground"
+            android:id="@+id/Fat_ProgressBar" />
 
         <TableLayout
             android:layout_width="match_parent"
